--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,14 @@
 
   <uses-permission android:name="android.permission.INTERNET" />
 
-  <application android:name=".MainApplication" android:label="@string/app_name" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:allowBackup="false" android:theme="@style/AppTheme" android:networkSecurityConfig="@xml/network_security_config"
+  <application 
+  android:name=".MainApplication" 
+  android:label="@string/app_name" 
+  android:icon="@mipmap/ic_launcher" 
+  android:roundIcon="@mipmap/ic_launcher" 
+  android:allowBackup="false" 
+  android:theme="@style/AppTheme" 
+  android:networkSecurityConfig="@xml/network_security_config"
   android:supportsRtl="true">
     <activity android:name=".MainActivity" android:label="@string/app_name" android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode" android:launchMode="singleTask" android:windowSoftInputMode="adjustResize">
       <intent-filter>
@@ -10,5 +17,5 @@
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-  </application>
+  </application> 
 </manifest>
