--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.1.0",
     "react-i18next": "^11.16.9",
     "react-native": "0.68.2",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-code-push": "^7.0.4",
     "react-native-config": "^1.4.5",
     "react-native-gesture-handler": "^2.4.2",
