--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^8.1.0",
     "react-redux": "^7.2.5",
@@ -55,6 +56,7 @@
     "@types/jest": "^28.1.0",
     "@types/react-native": "^0.67.7",
     "@types/react-native-restart": "^0.0.14",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^28.1.0",
