--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-code-push": "^7.0.4",
     "react-native-config": "^1.4.5",
+    "react-native-fast-image": "^8.6.1",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "^2.8.0",
